--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,18 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "d3": "^5.12.0",
+    "d3-array": "^2.3.3",
+    "d3-axis": "^1.0.12",
+    "d3-brush": "^1.1.3",
+    "d3-geo": "^1.11.6",
+    "d3-scale": "3.1.0",
+    "d3-selection": "^1.4.0",
+    "d3-shape": "^1.3.5",
+    "d3-svg-legend": "^2.25.6",
+    "d3-transition": "^1.2.0",
     "react": "^16.10.2",
+    "react-d3-pie-chart": "^1.0.3",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0"
   },
