--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "App that keeps track of your carbon footprint",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node -r dotenv/config api/app.js",
     "dev": "nodemon -r dotenv/config api/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+  },
+  "engines": {
+    "node": "10.15.1",
+    "npm": "6.4.1"
   },
   "keywords": [],
   "author": "",
