--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "App that keeps track of your carbon footprint",
   "main": "app.js",
   "scripts": {
-    "start": "node -r dotenv/config api/app.js",
+    "start": "node api/app.js",
     "dev": "nodemon -r dotenv/config api/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "cd client && npm install && npm run build",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "engines": {
