--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "node api/app.js",
     "dev": "nodemon -r dotenv/config api/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cd client && npm install && npm run build",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "build": "cd client && npm install && npm run build"
   },
   "engines": {
     "node": "10.15.1",
